Lingoport Pseudo-Localization: eo

--- a/locales/fs-artifact-grid-item_eo.json
+++ b/locales/fs-artifact-grid-item_eo.json
@@ -12,6 +12,7 @@
   "restricted": "[Ŕéšţŕîçţéð------------- П國カ내]",
   "restricted_info": "[Ţĥîš Ṁéɱöŕý ĥåš ƀééñ ŕéšţŕîçţéð ðûé ţö çöñţéñţ (šéé <a target='blank' href=\"https://www.lds.org/legal/familysearch-upload-guidelines-and-policies\">Ûþļöåð Ĝûîðéļîñéš åñð Þöļîçîéš</a>) åñð ŵîļļ ƀé ŕéɱöṽéð ƒŕöɱ ţĥé šîţé ŵîţĥîñ 30 ðåýš.]",
   "screening": "[Šçŕééñîñĝ----------- П國カ내]",
+  "update_fail": "[Ţĥéŕé ŵåš å þŕöƀļéɱ šåṽîñĝ ţĥé šţöŕý. Ṽéŕîƒý ýöûŕ ļåţéšţ ûþðåţéš åñð ŕé-šåṽé.---------------- П國カ내]",
   "upload_failed": "[Ûþļöåð ƒåîļéð. Ðéļéţé, åñð ûþļöåð åĝåîñ.----------------- П國カ내]",
   "uploading": "[Ûþļöåðîñĝ----------- П國カ내]"
 }
