--- a/locales/fs-artifact-grid-item_id.json
+++ b/locales/fs-artifact-grid-item_id.json
@@ -1,17 +1,18 @@
 {
+  "not_tagged": "Memori ini tidak ditandai.",
   "add_title": "Tambahkan Judul",
-  "associated_audio": "Audio Terkait",
-  "check_email": "Periksa posel Anda yang terhubung dengan Akun FamilySearch Anda untuk petunjuk.",
+  "restricted": "Dibatasi",
   "contributed_by": "Oleh: {0}",
   "contributed_by_link": "Oleh: <span class='style-scope fs-artifact-grid-item contributor-name' on-tap='_openContactCard'>{0}</span>",
-  "not_tagged": "Memori ini tidak ditandai.",
-  "private_memory_tooltip": "Memori ini adalah privat. Hanya Anda yang dapat melihatnya.",
   "processing": "Pemrosesan",
   "processing_fail": "Gagal Memproses. Hapus dan unggah lagi atau hubungi dukungan.",
-  "remaining_days_count": "{0} hari",
-  "restricted": "Dibatasi",
-  "restricted_info": "Memori ini telah dibatasi karena konten (lihat <a target='blank' href=\"https://www.lds.org/legal/familysearch-upload-guidelines-and-policies\">Pedoman dan Kebijakan Pengunggahan</a>) dan akan dihapus dari situs dalam waktu 30 hari.",
+  "update_fail": "Ada masalah menyimpan kisah. Verifikasi pemutakhiran terkini Anda dan simpan kembali.",
   "screening": "Penyaringan",
+  "uploading": "Mengunggah",
+  "restricted_info": "Memori ini telah dibatasi karena konten (lihat <a target='blank' href=\"https://www.lds.org/legal/familysearch-upload-guidelines-and-policies\">Pedoman dan Kebijakan Pengunggahan</a>) dan akan dihapus dari situs dalam waktu 30 hari.",
+  "check_email": "Periksa posel Anda yang terhubung dengan Akun FamilySearch Anda untuk petunjuk.",
   "upload_failed": "Gagal mengunggah. Hapus, dan unggah lagi.",
-  "uploading": "Mengunggah"
+  "remaining_days_count": "{0} hari",
+  "associated_audio": "Audio Terkait",
+  "private_memory_tooltip": "Memori ini adalah privat. Hanya Anda yang dapat melihatnya."
 }
