--- a/locales/fs-artifact-grid-item_th.json
+++ b/locales/fs-artifact-grid-item_th.json
@@ -6,6 +6,7 @@
   "contributed_by_link": "โดย: <span class='style-scope fs-artifact-grid-item contributor-name' on-tap='_openContactCard'>{0}</span>",
   "processing": "กำลังดำเนินการ",
   "processing_fail": "การดำเนินการตามขั้นตอนไม่สำเร็จ ลบและอัปโหลดอีกครั้งหรือติดต่อหน่วยช่วยเหลือ",
+  "update_fail": "เกิดปัญหาขณะบันทึกเรื่องราว ยืนยันการอัปเดตล่าสุดของคุณแล้วบันทึกอีกครั้ง",
   "screening": "กำลังกรอง",
   "uploading": "กำลังอัปโหลด",
   "restricted_info": "ความทรงจำนี้มีข้อจำกัดเนื่องจากเนื้อหา (ดู <a target='blank' href=\"https://www.lds.org/legal/familysearch-upload-guidelines-and-policies\">แนวทางและนโยบายการอัปโหลด</a>) และจะถูกลบออกจากเว็บไซต์ภายใน 30 วัน",
