--- a/locales/fs-artifact-grid-item_cs.json
+++ b/locales/fs-artifact-grid-item_cs.json
@@ -6,6 +6,7 @@
   "contributed_by_link": "Přidáno uživatelem <span class='style-scope fs-artifact-grid-item contributor-name' on-tap='_openContactCard'>{0}</span>",
   "processing": "Zpracovává se",
   "processing_fail": "Zpracování se nezdařilo. Artefakt smažte a nahrajte znovu, nebo kontaktujte technickou podporu.",
+  "update_fail": "Při ukládání příběhu došlo k problému. Potvrďte své poslední změny a uložte příběh znovu.",
   "screening": "Prověřování",
   "uploading": "Nahrávání",
   "restricted_info": "K této vzpomínce byl kvůli jejímu obsahu omezen přístup (viz <a target='blank' href=\"https://www.lds.org/legal/familysearch-upload-guidelines-and-policies\">Pokyny a pravidla týkající se nahrávání obsahu</a>) a bude z těchto stránek do 30 dnů odstraněna.",
