--- a/locales/fs-artifact-grid-item_sk.json
+++ b/locales/fs-artifact-grid-item_sk.json
@@ -6,6 +6,7 @@
   "contributed_by_link": "Od: <span class='style-scope fs-artifact-grid-item contributor-name' on-tap='_openContactCard'>{0}</span>",
   "processing": "Spracovávam",
   "processing_fail": "Spracovanie zlyhalo. Odstráňte a znova nahrajte alebo kontaktujte podporu.",
+  "update_fail": "Pri ukladaní príbehu sa vyskytol problém. Overte svoje najnovšie aktualizácie a znova ho uložte.",
   "screening": "Preverovanie",
   "uploading": "Presúvajú sa údaje",
   "restricted_info": "Táto spomienka má kvôli obsahu obmedzený prístup (pozri <a target='blank' href=\"https://www.lds.org/legal/familysearch-upload-guidelines-and-policies\">Inštrukcie a pravidlá nahrávania</a>) a bude zo stránky do 30 dní odstránený.",
