Lingoport Automated Import

--- a/locales/fs-artifact-grid-item_fj.json
+++ b/locales/fs-artifact-grid-item_fj.json
@@ -1,17 +1,18 @@
 {
+  "not_tagged": "Na ivakananumi oqo e sega ni vakaitoka",
   "add_title": "Kuria na ulutaga",
-  "associated_audio": "iRogorogo Veiwekani",
-  "check_email": "Dikeva na nomu imeli e semati ki na nomu akaude ni FamilySearch me baleta na idusidusi.",
+  "restricted": "Vakatabui",
   "contributed_by": "Mai vei: {0}",
   "contributed_by_link": "Mai vei: <span class='style-scope fs-artifact-grid-item contributor-name' on-tap='_openContactCard'>{0}</span>",
-  "not_tagged": "Na ivakananumi oqo e sega ni vakaitoka",
-  "private_memory_tooltip": "Na vakananumi oqo e sega ni wasei. Ena rawa ni raica ga o iko.",
   "processing": "Cakacakataka",
   "processing_fail": "Sega ni Rawa na Kena Cakacakataki Bokoca ka vakavodoka tale se veitaratara ena tabana ni veivuke.",
-  "remaining_days_count": "{0} siga",
-  "restricted": "Vakatabui",
-  "restricted_info": "Na Vakananumi oqo sa vakatabui baleta na lewena (raica na <a target='blank' href=\"https://www.lds.org/legal/familysearch-upload-guidelines-and-policies\">iDusidusi ni Lavelave kei na Lawatu</a>) ka na qai kau tani mai na vanua oqo ena loma ni 30 na siga.",
+  "update_fail": "A yaco e dua na leqa ni maroroi tiko na italanoa. Vakadeitaka na nomu vakavoui vou ka maroroya tale.",
   "screening": "Vakasaravi",
+  "uploading": "Vakavodoki",
+  "restricted_info": "Na Vakananumi oqo sa vakatabui baleta na lewena (raica na <a target='blank' href=\"https://www.lds.org/legal/familysearch-upload-guidelines-and-policies\">iDusidusi ni Lavelave kei na Lawatu</a>) ka na qai kau tani mai na vanua oqo ena loma ni 30 na siga.",
+  "check_email": "Dikeva na nomu imeli e semati ki na nomu akaude ni FamilySearch me baleta na idusidusi.",
   "upload_failed": "Sega ni Cakacaka na Vakavodoki Oqo! Bokoca, ka vakavodoka tale.",
-  "uploading": "Vakavodoki"
+  "remaining_days_count": "{0} siga",
+  "associated_audio": "iRogorogo Veiwekani",
+  "private_memory_tooltip": "Na vakananumi oqo e sega ni wasei. Ena rawa ni raica ga o iko."
 }
